--- a/bio.html
+++ b/bio.html
@@ -16,26 +16,22 @@
     <a class="nav-link" href="coffee.html">Coffee corner</a>
   </nav>
 
-<main>
   <div class="container">
-    <h1 class="mt-5">Bio</h1>
-    <div class="row">
-      <div class="col-md-4">
-        <img src="images/me.jpg" class="align-self-center mr-3" alt="me" width="200">
-      </div>
-      <div class="col-md-8">
-        <p class="text-justify">
-          My name is Mathieu, I have two young kids.
-
-          I work in a large software company and I'm learning programming because I enjoy it and I want to know how it works.
-        </p>
-      </div>
-    </div>
+    <h1 class="mt-5 text-center">Bio</h1>
+    <img src="images/me.jpg" class="img-fluid" alt="me"  width="100%" >
+    <p class="text-justify">
+      My name is Mathieu, I have two young kids.
+    </p>
+    <p class="text-justify">
+      I work in a large software company and I'm learning programming because I enjoy it.
+    </p>
+    <p class="text-justify">
+      I'm a geek, I like Unix systems and I want to learn web programming.
+    </p>
+    <p class="text-justify">
+      But I like many others things, like cooking, hiking, playing with the kids, etc. I always begin my day with a good <a href="coffee.html">coffee</a> and to stay fit I practice sport <a href="climbing.html">climbing</a>.
+    </p>
   </div>
-</main>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
