--- a/bio.html
+++ b/bio.html
@@ -18,18 +18,15 @@
 
   <div class="container">
     <h1 class="mt-5 text-center">Bio</h1>
-    <img src="images/me.jpg" class="img-fluid" alt="me"  width="100%" >
+    <img src="images/me.jpg" class="img-fluid" alt="me">
     <p class="text-justify">
-      My name is Mathieu, I have two young kids.
+      Hi! My name is Mathieu. I'm 36 and I have two young kids.
     </p>
     <p class="text-justify">
-      I work in a large software company and I'm learning programming because I enjoy it.
+      I work in a large software company and I'm learning programming because I enjoy it. I like Linux and Mac OS and I want to learn web programming.
     </p>
     <p class="text-justify">
-      I'm a geek, I like Unix systems and I want to learn web programming.
-    </p>
-    <p class="text-justify">
-      But I like many others things, like cooking, hiking, playing with the kids, etc. I always begin my day with a good <a href="coffee.html">coffee</a> and to stay fit I practice sport <a href="climbing.html">climbing</a>.
+      But I'm not only playing or working with computer and I enjoy cooking, hiking, playing with the kids, etc. I always begin my day with a good <a href="coffee.html">coffee</a> and to stay fit I practice sport <a href="climbing.html">climbing</a>.
     </p>
   </div>
 
