--- a/bio.html
+++ b/bio.html
@@ -10,7 +10,7 @@
 <body class="flex-column">
 
   <nav class="navbar">
-    <a class="nav-link" href="index.html">Home</a>
+    <a class="nav-link nav-green" href="index.html">Home</a>
     <a class="nav-link" href="bio.html">Bio</a>
     <a class="nav-link" href="climbing.html">Climbing</a>
     <a class="nav-link" href="coffee.html">Coffee corner</a>
